--- a/render.yaml
+++ b/render.yaml
@@ -20,6 +20,8 @@ services:
     generateValue: true
   - key: UTILS_SECRET
     generateValue: true
+  - key: REDIS_URL
+    value: redis://localhost:6479
   - key: DATABASE_URL
     fromDatabase:
       name: outline-db
