--- a/render.yaml
+++ b/render.yaml
@@ -21,7 +21,7 @@ services:
   - key: UTILS_SECRET
     generateValue: true
   - key: REDIS_URL
-    value: redis://localhost:6479
+    value:
   - key: DATABASE_URL
     fromDatabase:
       name: outline-db
