adding a test db url

--- a/render.yaml
+++ b/render.yaml
@@ -29,6 +29,10 @@ services:
     fromDatabase:
       name: outline-db
       property: connectionString
+  - key: DATABASE_URL_TEST
+    fromDatabase:
+      name: outline-db
+      property: connectionString
   - key: URL
     fromService:
       type: web
