--- a/render.yaml
+++ b/render.yaml
@@ -7,9 +7,9 @@ services:
     name: data
     mountPath: /data
   envVars:
-  - key: MINIO_ACCESS_KEY
+  - key: MINIO_ROOT_USER
     generateValue: true
-  - key: MINIO_SECRET_KEY
+  - key: MINIO_ROOT_PASSWORD
     generateValue: true
 - type: web
   name: outline
@@ -43,12 +43,12 @@ services:
     fromService:
       type: web
       name: minio
-      envVarKey: MINIO_ACCESS_KEY
+      envVarKey: MINIO_ROOT_USER
   - key: AWS_SECRET_ACCESS_KEY
     fromService:
       type: web
       name: minio
-      envVarKey: MINIO_SECRET_KEY
+      envVarKey: MINIO_ROOT_PASSWORD
   - key: AWS_REGION
     value: us-east-1
   - key: AWS_S3_UPLOAD_BUCKET_NAME
@@ -76,6 +76,18 @@ services:
     value: true
   - key: TEAM_LOGO
     sync: false
+  - key: SMTP_USERNAME
+    sync: false
+  - key: SMTP_PASSWORD
+    sync: false
+  - key: SMTP_HOST
+    sync: false
+  - key: SMTP_PORT
+    sync: false
+  - key: SMTP_FROM_EMAIL
+    sync: false
+  - key: SENTRY_DSN
+    sync: false
 - type: pserv
   name: redis
   env: docker
@@ -91,12 +103,6 @@ services:
 
 
 # GOOGLE_ANALYTICS_ID=
-# SENTRY_DSN=
-# SMTP_HOST=
-# SMTP_PORT=
-# SMTP_USERNAME=
-# SMTP_PASSWORD=
-# SMTP_FROM_EMAIL=
 # SMTP_REPLY_EMAIL=
 # Custom logo that displays on the authentication screen, scaled to height: 60px
 
