trying to get minio console working

--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,13 @@ services:
     generateValue: true
   - key: MINIO_ROOT_PASSWORD
     generateValue: true
+  - key: MINIO_BROWSER
+    value: on
+  - key: MINIO_BROWSER_REDIRECT_URL
+    fromService:
+      type: web
+      envVarKey: RENDER_EXTERNAL_URL
+      name: minio
 - type: web
   name: outline
   env: docker
