--- a/render.yaml
+++ b/render.yaml
@@ -65,7 +65,7 @@ services:
   - key: SENTRY_DSN
     sync: false
 - type: pserv
-  name: redis
+  name: outline-redis
   env: docker
   repo: https://github.com/render-examples/redis.git # optional
   envVars:
